--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset=utf-8>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Jason yuan</title>
+    <title>Jason Yuan</title>
   </head>
   <body>
     <div id="content"></div>
